@@ -1,3 +1,4 @@
+1.1.11-0 @05/24/2006 14:10:00 UTC@
 1.1.10-0 @05/23/2006 20:25:00 UTC@
 1.1.9-0 @05/23/2006 14:30:00 UTC@
 1.1.8-0 @05/12/2006 15:25:00 UTC@
